--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,13 @@ dependencies {
     testImplementation group: 'info.cukes', name: 'cucumber-picocontainer', version: '1.2.5'
 
     // BIBLIOTECAS/PACOTES DE RELATÓRIO - UM SIMPLES, UM COMPLETO E UM PARA FORMATAR O SEGUNDO
+
+    // Gera o dashboard - painel bonito - a partir do AventStack Extent Reports
     implementation group: 'com.vimalselvam', name: 'cucumber-extentsreport', version: '3.1.1'
+
+    // Gera o json e o html com os dados do teste para o relatório associado as features e scenarios do gherkin
     implementation group: 'com.aventstack', name: 'extentreports', version: '3.0.7'
+
     implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
 }
 test{
